// Vitest Snapshot v1

exports[`Breadcrumb > should render item 1`] = `
"<div class=\\"breadcrumb\\" data-v-4117cb18=\\"\\">
  <div class=\\"content\\" data-v-4117cb18=\\"\\">
    <icon-stub name=\\"g\\" nopadding=\\"false\\" data-v-4117cb18=\\"\\"></icon-stub><span class=\\"name\\" data-v-4117cb18=\\"\\">g</span>
  </div>
</div>"
`;

exports[`Breadcrumb > should render router-link for link 1`] = `
"<div class=\\"breadcrumb\\" data-v-4117cb18=\\"\\">
  <router-link to=\\"/g\\" class=\\"content has-link\\" data-v-4117cb18=\\"\\">
    <icon-stub name=\\"g\\" nopadding=\\"false\\" data-v-4117cb18=\\"\\"></icon-stub><span class=\\"name\\" data-v-4117cb18=\\"\\">g</span>
  </router-link>
</div>"
`;
